<resources>
    <string name="app_name">Swarm Enhancer</string>
    <string name="connected_to_foursquare">Hey looks like you’re connected to Foursquare!</string>
    <string name="app_not_installed_message">To do this, you’ll need the latest version of Foursquare installed.</string>
    <string name="updates_paused_key">Updates paused</string>
    <string name="update_interval_key">Update interval</string>
    <string name="local_radius_key">Local radius</string>
    <string name="pause_updates_button_text">Pause automatic check-ins</string>
    <string name="resume_updates_button_text">Resume automatic check-ins</string>
    <string name="login_button_text">Login to Swarm</string>
    <string name="update_interval_label_text">Update interval in hours</string>
    <string name="local_radius_label_text">Local radius in km</string>
    <string name="apply_button_text">Apply</string>
</resources>
